--- a/4.mss/main.tex
+++ b/4.mss/main.tex
@@ -383,18 +383,20 @@ To estimate pairwise interactions in diverse, horizontal systems such as those o
    \subsection{Limitations}
 
 
-   linear alphas (density-independent) and HOIs???
         
         \paragraph{}
-        Our novel framework includes a versatile approach for estimating interactions between system elements which are not observed to cooccur. Care should be taken, however, that these unrealised interactions do not dominate resulting networks. The method we propose uses observed interactions to estimate unobserved interactions. This method thus works better the more observed interactions available and is thus not ideal for small or heavily fragmented datasets. It is also important to consider the likely reasons for missing interactions. Forbidden links are a subset of potential interactions which cannot be observed, often due to physical constraints (e.g. biological mismatch) or spatio-temporal uncoupling. For example, a pair of short-lived annual plants might have such opposing phenologies that their growing seasons never overlap in the field, and their effect on one another cannot be estimated from purely observation data. [???] We direct the reader towards the literature on forbidden interactions \parencite{Olesen2011, Jordano2016} for solving these cases. 
+        Our novel framework includes a versatile approach for estimating interactions between system elements which are not observed to cooccur. Care should be taken, however, that these unrealised interactions do not dominate resulting networks. The method we propose uses observed interactions to estimate unobserved interactions. This method thus works better the more observed interactions available and is thus not ideal for small or heavily fragmented datasets. It is also important to consider the likely reasons for missing interactions. Forbidden links are a subset of potential interactions which cannot be observed, often due to physical constraints (e.g. biological mismatch) or spatio-temporal uncoupling. For example, a pair of short-lived annual plants might have such opposing phenologies that their growing seasons never overlap in the field. We direct the reader towards the literature on forbidden interactions \parencite{Olesen2011, Jordano2016} for solving these cases. 
 
         \paragraph{}
-        Our model framework is aimed to helping empiricists who would like to estimate species interactions in non-trophic communities. Though the MCMC sampling algorithm does allow for many parameters to be estimated, it is crucial to check chain-mixing and model behaviour to verify that the full parameter space is sampled. The amount of data required for sampling diverse communities may still be substantial. Grouping species which appear very rarely is also a common strategy to avoid over-parameterisation. In our case study, neighbour species which were recorded fewer than 10 times across all observations were grouped into an 'other' category with its own interaction effect. If interactions with or between very rare species are the explicit object of a study, however, data-collection should focus on amassing observations of focal individuals from those rarer species to be able to estimate  interaction strengths.   
+        Our framework assumes that though the total effect of one element on another increases with density, this relationship is linear. This may not always be the case however, as interactions may be invariant to density \parencite{} or scale non-linearly \parencite{}. Higher-order interactions may also...
+
+        \paragraph{}
+        Our model framework is aimed to helping empiricists who would like to estimate species interactions in non-trophic communities. Though the MCMC sampling algorithm does allow for many parameters to be estimated, it is crucial to check chain convergence and model behaviour to verify that the full parameter space is sampled. The amount of data required for sampling diverse communities may still be substantial. Grouping species which appear very rarely is also a common strategy to avoid over-parameterisation. In our case study, neighbour species which were recorded fewer than 10 times across all observations were grouped into an 'other' category with its own interaction effect. If interactions with or between very rare species are the explicit object of a study, however, data-collection should focus on amassing observations of focal individuals from those rarer species to be able to estimate  interaction strengths.   
 
 \subsection{Conclusion}
 
     \paragraph{} 
-    There is now a rich body of work describing the characteristics of food web, plant-pollinator and host-parasite interactions, but fewer network approaches focus on non-trophic interactions such as those occurring between plants \parencite{Ellison2019}. Here we present a novel framework which makes the process of inferring  interactions in horizontal systems easier, whilst allowing for many and multiple types (competitive and facilitative) of interactions. In turn, this allows the application of  network theory tools to the management of non-trophic systems, as well as to deepening our understanding of diversity, stability and other community-level properties which emerge from interactions. [MMM: I would add one or few sentences noting the key findings from the case study] Though we illustrate our study with one particular ecological dataset, the method presented here could be adapted for use on a wider array of  horizontal systems such as those found in microbial, neural, and social networks. 
+    There is now a rich body of work describing the characteristics of food web, plant-pollinator and host-parasite interactions, but fewer network approaches focus on non-trophic interactions such as those occurring between plants \parencite{Ellison2019}. Here we present a novel framework which makes the process of inferring  interactions in horizontal systems easier, whilst allowing for many and multiple types (competitive and facilitative) of interactions. In turn, this allows the application of  network theory tools to the management of non-trophic systems, as well as to deepening our understanding of diversity, stability and other community-level properties which emerge from interactions. By applying our framework to a wildflower case study, we find that over-abundant species do not appear to self-regulate more strongly than rare species, contrary to expectations. We also identify species which have strong overall effects on the community, and an unusual case of an exotic grass which facilitates natives. Though we illustrate our study with one particular ecological dataset, the method presented here could be adapted for use on a wider array of  horizontal systems such as those found in microbial, neural, and social networks. 
    
 
 % \bibliography{../../../BibTex_files/03_Chapter3}
@@ -415,9 +417,8 @@ To estimate pairwise interactions in diverse, horizontal systems such as those o
 
     This code is also available in the Supplementary Methods zip folder under the name 'joint\_model.stan', alongside the R scripts and functions used to prepare the data and call upon STAN to run the model. \\
 
-    We make the two following observations in addition to the comments in the code.
-    Realised interactions (beta\_ij), which are defined as a vector,  must be matched to their correct position in the interaction matrix. This is the role of the istart, iend, icol, and irow vectors defined in the data block. The Supplementary Methods zip folder also contains the data\_prep.R file, which will show how to calculate these vectors from the input data. 
-    We define the effect parameters as a unit vector, which means we only require S-1 degrees of freedom to estimate all effect values. The response parameter ...
+    We make the two following observations in addition to the comments in the code. Firstly, realised interactions (beta\_ij) are defined as a vector, which must then be matched to their correct position in the interaction matrix. This is the role of the istart, iend, icol, and irow vectors defined in the data block. The Supplementary Methods zip folder also contains the data\_prep.R file, which will show how to calculate these vectors from the input data. 
+    Secondly, we define the effect parameters as a unit vector, which means we only require S-1 degrees of freedom to estimate all effect values. The response parameter ...
 
     [Add explanation on indexing system and parameterisation tricks]
 
