--- a/4.mss/main.tex
+++ b/4.mss/main.tex
@@ -170,7 +170,7 @@ To estimate pairwise interactions in diverse, horizontal systems such as those o
         where $\sigma$ is a community-level scale parameter for the logistic distribution. We use a logistic distribution here because the heavier tails make it a slightly weaker informative prior than a normal distribution. $\sigma$ defines how widely the tails extend and can be expressed in terms of the standard deviation. 
 
 
-    \subsection{Rescaling interaction effects into per-capita interactions}
+    \subsection{Rescaling interaction estimates into per-capita interactions}
 
         The $\beta_{ij}$ and $r_i e_j$ estimates returned by the framework describe the effect of element $j$ on the performance of element $i$. Differences in the magnitude of these interaction terms may thus reflect intrinsic differences in performance, which can vary in time, space and between elements. Two species may for example have different baseline values of reproductive fitness. In order to make the effects of interactions comparable between elements, the interaction terms returned by both models above can be transformed into \textit{per capita} interaction strengths \parencite{Laska1998}. The appropriate scaling is determined by rewriting the neighbour density-dependent model (Eq. \ref{nddm}) into a form equivalent to a Lotka-Volterra competition model: 
 
@@ -203,10 +203,10 @@ To estimate pairwise interactions in diverse, horizontal systems such as those o
     \subsection{Model fitting}
 
         \paragraph{}        
-        The NDDM (Eq. 1) and the RIM (Eqs. 2 and 3) can be implemented as generalised linear models in STAN \parencite{Carpenter2017}, a Bayesian statistical language where coefficient values will be estimated by MCMC sampling. The advantage of this approach is two-fold: the model can converge and coefficients can be estimated despite high model complexity and a large number of parameters. Using STAN requires translating the model formula into the STAN language, setting priors for parameters to be estimated, and using an indexing system to identify realised interactions which are then fed into the REM. We provide a working example of the STAN code used to specify and set this model to the case study below in the Supplementary Methods \ref{SI:modelcode}, as well as a downloadable zip folder which contains the necessary STAN model code, R script and functions to run the model on a simulated dataset. From the model file, only the link function for $P_i$ and it's parameterisation need to be modified in order to apply it to a different model or system. Additionally, non-integer measures of performance (e.g. biomass) should be redefined as real rather than integers in the data block. In the code given, a negative binomial distribution is used to fit seed production ($P_i$) but a different distribution may be more appropriate when using other measures of performance.   
+        The NDDM (Eq. 1) and the RIM (Eqs. 2 and 3) can be implemented as generalised linear models in STAN \parencite{Carpenter2017}, a Bayesian statistical language where coefficient values will be estimated by MCMC sampling. The advantage of this approach is two-fold: the model can converge and coefficients can be estimated despite high model complexity and a large number of parameters. Using STAN requires translating the model formula into the STAN language, setting priors for parameters to be estimated, and using an indexing system to identify realised interactions which are then fed into the RIM. We provide a working example of the STAN code used to specify and set this model to the case study below in the Supplementary Methods \ref{SI:modelcode}, as well as a downloadable zip folder which contains the necessary STAN model code, R script and functions to run the model on a simulated dataset. From the model file, only the link function for $P_i$ and it's parameterisation need to be modified in order to apply it to a different model or system. Additionally, non-integer measures of performance (e.g. biomass) should be redefined as real rather than integers in the data block. In the code given, a negative binomial distribution is used to fit seed production ($P_i$) but a different distribution may be more appropriate when using other measures of performance.   
 
         \paragraph{}
-        Readers familiar with MCMC sampling will notice that we run our model using only one MCMC chain, though .. are usually recommended to run multiple chains. Get more info from boral::boral(). 
+        Bayesian models are often run on multiple MCMC chains. In our case, we deliberately run only one MCMC chain because the latent variables in our model ($r_i$ and $e_j$) are invariant to sign switching. This means that different MCMC chains can return coefficient values which are of the same magnitude, but opposing signs. As with the boral function in the boral R package \parencite{} and the MCMCfactanal function in the MCMCpack package \parencite{}, we run one chain only to simplify issues with checking chain convergence and computing parameter estimates which arise from sign-switching.
 
         \paragraph{}
         STAN returns parameters as distributions which maximise the likelihood, and are conditioned by the data and priors. Priors describe the distribution of plausible values which these parameters may take. For an introduction to Bayesian inference which relates the use of priors to frequentist hypothesis testing, see \textcite{Ellison1996}. We recommend investigators experiment with setting different informed priors to both improve model convergence and verify the robustness of parameter estimates. The resulting parameters are termed posterior distributions, and samples from the posterior are drawn for analysis. Using parameter distributions rather than point estimates allows for easy inclusion of uncertainty in the analysis of results, we therefore recommend bootstrap sampling from each posterior interaction strength distribution to create multiple samples of the community interaction matrix. \textcite{Ellison2004} also provides an accessible review of parameter estimates and the use of posterior distributions using a worked example on ant species richness data.
