--- a/4.mss/main.tex
+++ b/4.mss/main.tex
@@ -288,28 +288,15 @@ To estimate pairwise interactions in diverse, horizontal systems such as those o
     \subsection{Examples of ecological applications}
 
     \paragraph{}
-    Each of the questions below makes use of one of the key features of our framework: intraspecific interactions, non-symmetrical interactions, and the ability to estimate positive and negative interactions. 
+    We illustrate a few potential applications of our framework by exploring questions of common ecological relevance and how these can be answered using the results from our case study. Each question below highlights some of the advantages of our resulting interaction network over the spatial-association network returned by the cooccur package: intraspecific interactions, non-symmetrical interactions, and the ability to estimate positive and negative interactions. 
 
 
-    We now illustrate how the rich information provided by our interaction networks 
-
-    potential uses of our framework 
-
-
-
-    by examining ecological questions 
-
-
-
-    important to species management and how the interaction matrix derived from our case study data may help us better understand the system in question. We use three ecological questions which 
-    We use three ecological questions to illustrate some of the ways in which our results may be useful to empirical and applied ecologists.
- 
     \subsubsection*{Do abundant natives under-regulate their population density compared to rarer native species?}
-    One hypothesis as to why certain plant species are more abundant than others is that they tend to compete with themselves less strongly than rare species \parencite{Yenni2012, Yenni2017}. Hypothetically, this release from intraspecific competition pressure allows them to reach much higher abundances than species which strongly compete with themselves. In our case study, we can explore this hypothesis by plotting the effect of a species on itself (the diagonal of the interaction matrix, or intraspecific interactions) against it's abundance as in Figure \ref{fig:species}.A. Intraspecific interactions are at their weakest when close to $0$. The two most abundant native species \textit{Velleia rosea} (VERO) and \textit{Podolepsis canescens} (POCA) highlighted in purple fall very close to the median intraspecific interaction strength. This suggests that \textit{V. rosea} and \textit{P. canescens} do not reach high abundances through an under-regulation of their population density but through other means (e.g. access to a larger niche space). As noted previously, the diagonal of the matrix is not available in spatial association networks like those returned by the cooccur package.
+    One hypothesis as to why certain plant species are more abundant than others is that they tend to compete with themselves less strongly than rare species \parencite{Yenni2012, Yenni2017}. Hypothetically, this release from intraspecific competition pressure allows them to reach much higher abundances than species which strongly compete with themselves. In our case study, we can explore this hypothesis by plotting the effect of a species on itself (the diagonal of the interaction matrix, or intraspecific interactions) against it's abundance as in Figure \ref{fig:species}.A. Intraspecific interactions are at their weakest when close to $0$. The two most abundant native species \textit{Velleia rosea} (VERO) and \textit{Podolepsis canescens} (POCA) highlighted in purple fall very close to the median intraspecific interaction strength. This suggests that \textit{V. rosea} and \textit{P. canescens} do not reach high abundances through an under-regulation of their population density but through other means (e.g. access to a larger niche space). As noted previously, the diagonal of the matrix is not available in spatial association networks.
     %[ADD You could note that no comparison with standard approaches is possible because existing methods don't allow for calculation of self regulation.  You send it before but maybe drive that novelty home. ] 
 
     \subsubsection*{Which species may be taking on keystone roles in the system?}
-    Keystone species have strong effects on the dynamics of the whole ecosystem, such that their exclusion from a community can create significant changes in species density and composition \parencite{Paine1969}. Furthermore, the impact of keystone species on other species is disproportionately large relative to their abundance \parencite{Power1996, Piraino2002, Libralato2006}. The keystone species concept is  relevant to ecosystem management and conservation in helping identify species of particular importance for the safeguarding of a whole system \parencite{Soule2005a}. Though determining which species truly serve keystone roles has historically involved extensive ecological experimentation \parencite{}, we can identify potential candidates by comparing a species' impact on the population growth of other species to it's own abundance \parencite{Libralato2006}. It is important to note that because our framework allows for asymmetrical interactions, we are able to differentiate a species' impact on other species from it's response or sensitivity to neighbours. Figure \ref{fig:species}.B highlights three native species in green which may be potential keystone species due to having strongly competitive or facilitative effects on the rest of the community overall, despite rather low abundances: \textit{Trachymene ornata} (TROR), \textit{Haloragis odontocarpa} (HAOD) and \textit{Gilberta tenuifolia} (GITE). Plotting species association strengths against their log abundance, however, does not return the same insights (Figure \ref{fig:coocab}).
+    Keystone species have strong effects on the dynamics of the whole ecosystem, such that their exclusion from a community can create significant changes in species density and composition \parencite{Paine1969}. Furthermore, the impact of keystone species on other species is disproportionately large relative to their abundance \parencite{Power1996, Piraino2002, Libralato2006}. The keystone species concept is  relevant to ecosystem management and conservation in helping identify species of particular importance for the safeguarding of a whole system \parencite{Soule2005a}. Though determining which species truly serve keystone roles has historically involved extensive ecological experimentation \parencite{}, we can identify potential candidates by comparing a species' impact on the population growth of other species to it's own abundance \parencite{Libralato2006}. It is important to note that because our framework allows for asymmetrical interactions, we are able to differentiate a species' impact on other species from it's response or sensitivity to neighbours. Figure \ref{fig:species}.B highlights three native species in green which may be potential keystone species due to having strongly competitive or facilitative effects on the rest of the community overall, despite rather low abundances: \textit{Trachymene ornata} (TROR), \textit{Haloragis odontocarpa} (HAOD) and \textit{Gilberta tenuifolia} (GITE). Plotting species spatial association strengths against their log abundance, however, does not return the same insights (Figure \ref{fig:coocab}).
     
 
     \subsubsection*{Do all exotic species compete with native species?}
